<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView02"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingLeft="-4dp"
	    android:paddingRight="-4dp" >
	    <TextView 
	        android:id="@+id/select_channel_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:text="@string/select_channel_text"/>
	    <Spinner
	        android:id="@+id/select_channel_spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/select_channel_text" />
	    
	    <Button 
	        android:id="@+id/location_base_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:gravity="left|center_vertical"
	        android:text="@string/location_base"
	        android:layout_below="@id/select_channel_spinner"/>
	    
	    <CheckBox android:id="@+id/location_base"
	        android:layout_width="48dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/select_channel_spinner"
	        android:layout_alignParentRight="true"
	        android:onClick="onLocationCheckboxClicked"/>
	    
	    <TextView
	        android:id="@+id/message_content_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:text="@string/message_content"
	        android:layout_below="@id/location_base_button"/> 
	    
	    <EditText
	        android:id="@+id/edit_message"
	        android:layout_width="0dp"
	        android:layout_toLeftOf="@+id/send_button"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:hint="@string/edit_message" 
	        android:layout_below="@id/message_content_text"/>
	    
	    <Button
	        android:id="@+id/send_button"
	        android:layout_width="72dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@id/message_content_text"
	        android:text="@string/button_send" />
	</RelativeLayout>
</ScrollView>